--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ services:
   hoopla-client:
     build:
       context: .
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     restart: always
