--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
 APP="hoopla-api"
-HOST="0.0.0.0"
+HOST="127.0.0.1"
 PORT=8000
-
-JWT_KEY="SUPER KEY"
 
 DB_DRIVER="postgresql"
 DB_DATABASE="qahvazor"
@@ -10,3 +8,8 @@ DB_HOST="127.0.0.1"
 DB_PORT=35432
 DB_USER="admin"
 DB_PASSWORD="password"
+
+JWT_KEY="1111111"
+
+POSTER_APPLICATION_ID="11111"
+POSTER_APPLICATION_SECRET="111111111"
